--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
             <h1>小慕医生</h1>
         </div>
         <div class="tool">
-            <img src="images/tel.png" alt="">
-            <span class="telnumber">088-88888888</span>
-            <a href=""><img src="images/chinese_icon.png" alt=""></a>
-            <a href=""><img src="images/english_icon.png" alt=""></a>
+            <div class="r1">
+                <img src="images/tel.png" alt="">
+                <span class="telnumber">088-88888888</span>
+                <a href=""><img src="images/chinese_icon.png" alt=""></a>
+                <a href=""><img src="images/english_icon.png" alt=""></a>
+            </div>
+            <div class="r2">
+                <input type="text" placeholder="找医生/科室">
+                <button><img src="images/search.png" alt=""></button>
+            </div>
         </div>
         <nav class="main-nav">
             <ul>
