add header-top's stylesheet

--- a/index.html
+++ b/index.html
@@ -8,26 +8,30 @@
     <title>小慕医生</title>
     <meta name="Description" content="小慕医生是一家专业的综合医院">
     <meta name="Keywords" content="医疗 ，美容，减肥，双眼皮">
+    <link rel="stylesheet" href="css/css.css">
 </head>
 
 <body>
     <!-- 页面头部 -->
     <header>
-        <div class="logo">
-            <h1>小慕医生</h1>
-        </div>
-        <div class="tool">
-            <div class="r1">
-                <img src="images/tel.png" alt="">
-                <span class="telnumber">088-88888888</span>
-                <a href=""><img src="images/chinese_icon.png" alt=""></a>
-                <a href=""><img src="images/english_icon.png" alt=""></a>
+        <div class="header-top">
+            <div class="logo">
+                <h1>小慕医生</h1>
             </div>
-            <div class="r2">
-                <input type="text" placeholder="找医生/科室">
-                <button><img src="images/search.png" alt=""></button>
+            <div class="tool">
+                <div class="r1">
+                    <img class="tel" src="images/tel.png" alt="">
+                    <span class="telnumber">088-88888888</span>
+                    <a href=""><img class="chinese_icon" class="icon" src="images/chinese_icon.png" alt=""></a>
+                    <a href=""><img class="english_icon" class="icon" src="images/english_icon.png" alt=""></a>
+                </div>
+                <div class="r2">
+                    <input type="text" placeholder="找医生/科室">
+                    <button><img src="images/search.png" alt=""></button>
+                </div>
             </div>
         </div>
+        
         <nav class="main-nav">
             <ul>
                 <li>首页</li>
